Applies fix for overlapping issue
Jusitfy-content and align-content removed from quote container.

--- a/style.css
+++ b/style.css
@@ -112,8 +112,6 @@ body {
     padding: 0 150px;    
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
 .boxes h1 {
@@ -175,14 +173,13 @@ body {
     min-width: 500px;
     font-size: 36px;
     font-style: italic;
-    flex-basis: auto;
-    align-self: flex-start;
 }
 
 .quote .Thor {
+    min-width: 500px;
     font-size: 24px;
     font-weight: bold;
-    align-self: flex-end;
+    text-align: right;
 }
 
 
